@@ -7,16 +7,34 @@ experimental[]
 The `elastic-agent run` command provides flags that alter the behavior of an
 agent:
 
-`-path.home`::
+`--path.home`::
 The home directory of the {agent}. `path.home` determines the location of the
 configuration files and data directory.
++
+If not specified, {agent} uses current working directory.
 
-`-c`::
-The configuration file to load. If not specified, {agent} uses
-`{path.home}/elastic-agent.yml`.
-
-`-path.data`::
+`--path.data`::
 The data directory used by {agent} to store downloaded artifacts. Also stores
 logs for any {beats} started and managed by {agent}.
 +
 If not specified, {agent} uses `{path.home}/data`.
+
+`-c`::
+The configuration file to load.
++
+If not specified, {agent} uses `{path.home}/elastic-agent.yml`.
+
+The `elastic-agent enroll` command provides flags that alter the behaviour of
+the enrollment process.
+
+`--ca-sha256`::
+Comma separated list of certificate authorities hash pins used for certificate verifications.
+
+`--certificate-authorities`::
+Comma separated list of root certificate for server verifications.
+
+`--force`::
+Force overwrite the current and do not prompt for confirmation.
+
+`--insecure`::
+Allow insecure connection to Kibana.
